feat: #34 적금 월별 조회 구현, 에러 등록 화면 수정